# rendering-engine

./: Readme.md
DSA/striver-DSA-course/: MergeSort.cpp  a.out  bubbleSort.cpp  insertionSort.cpp  quickSort.cpp  selectionSort.cpp
Godot/: Mouse.gd  Platform.tscn  backgrounddetailed1.png.import  icon.svg.import  main.tscn  mouse.tscn  project.godot
OpenGL/: CMakeLists.txt  a.out  main.cpp  makefile
OpenGL/res/: Basic.shader  DefaultLight3D.shader  TestCube3D.shader  (+3 more)
OpenGL/src/: CMakeLists.txt  a.out  main.cpp  makefile
OpenGL/src/renderer/: CMakeLists.txt  Camera.cpp  GLUtils.cpp  IndexBuffer.cpp  Input.cpp  Light.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shaders.cpp  Texture.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
OpenGL/src/renderer/include/: Camera.cpp  Camera.hpp  GLUtils.hpp  IndexBuffer.hpp  Input.hpp  Light.hpp  Mesh.hpp  Model.hpp  Renderer.hpp  Shaders.hpp  Texture.hpp  Texture2D.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
OpenGL/src/renderer/shaders/: Deafult3D.shader  DefaultLight3D.shader
OpenGL/src/tests/: CMakeLists.txt  TestCamera3D.cpp  TestCube3D.cpp  TestFrame.cpp  TestLighting.cpp  TestRect2D.cpp  TestTexture2D.cpp  TextCube3D.cpp
OpenGL/src/tests/include/: Test.hpp  TestCamera3D.hpp  TestCube3D.hpp  TestFrame.hpp  TestHome.hpp  TestLighting.hpp  TestModel3D.hpp  TestRect2D.hpp  TestTexture2D.hpp  TestTexture3D.hpp
res/: ColorAmbientDiffuse.shader  ColorAmbientDiffuseSpecular.shader  ColorAmbientLight.shader  ColorLight.shader
src/: CMakeLists.txt  main.cpp
src/renderer/: CMakeLists.txt  Input.cpp  Renderer.cpp  VertexArray.cpp
src/renderer/include/: Camera.hpp  IndexBuffer.hpp  Input.hpp  Light.hpp  Renderer.hpp  Shaders.hpp  VertexArray.hpp  VertexBuffer.hpp
src/tests/: CMakeLists.txt  TestCamera3D.cpp  TestCube3D.cpp  TestModel3D.cpp  TestTexture2D.cpp
src/tests/include/: TestCamera3D.hpp  TestCube3D.hpp  TestLighting.hpp  TestModel3D.hpp  TestRect2D.hpp  TestTexture3D.hpp
(+242 files in other folders)
