add_executable(open_gl ./main.cpp )
add_subdirectory("./renderer/")
add_subdirectory("./tests/")
include_directories(open_gl PUBLIC "./renderer/include/")
include_directories(open_gl PUBLIC "./tests/include/")
target_link_libraries(open_gl PUBLIC GL)
target_link_libraries(open_gl PUBLIC glfw3)
target_link_libraries(open_gl PUBLIC GLEW)
target_link_libraries(open_gl PUBLIC renderer)
target_link_libraries(open_gl PUBLIC tests)

