file(GLOB SOURCES "./*.cpp")
file (GLOB VENDOR_SOURCES "./include/vendor/*/*.cpp")
include_directories(tests PUBLIC "../renderer/include/vendor")
include_directories(tests PUBLIC "./include/")
include_directories(tests PUBLIC "../renderer/include/")
add_library(tests ${SOURCES} ${VENDOR_SOURCES})
target_link_libraries(tests PUBLIC renderer)
